<?xml version="1.0" encoding="utf-8"?>


<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.create.CreateCocktailFragment">

    <data>
        <variable
            name="cocktailViewModel"
            type="com.example.mycocktails.screens.cocktail.CocktailViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/mycocktailbackground"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/CreateCocktailFragment_TextView_Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CreateCocktailFragment_TextView_Title"
                    android:textColor="@android:color/black"
                    android:theme="@style/Screen_Title_Style" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextView_CocktailName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:hint="Naam cocktail"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_IngredientAmount1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateCocktailFragment_TextInput_IngredientAmount1"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:tag="HoeveelheidIngredient1"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_Ingredient1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateRecipeFragment_TextView_Ingredient1"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_IngredientAmount2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateCocktailFragment_TextInput_IngredientAmount2"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"                    android:tag="HoeveelheidIngredient1"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_Ingredient2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/CreateRecipeFragment_TextView_Ingredient2"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_IngredientAmount3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateCocktailFragment_TextInput_IngredientAmount3"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:tag="HoeveelheidIngredient3"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_Ingredient3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateRecipeFragment_TextView_Ingredient3"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_IngredientAmount4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateCocktailFragment_TextInput_IngredientAmount4"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"                    android:tag="HoeveelheidIngredient1"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_Ingredient4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateRecipeFragment_TextView_Ingredient4"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_IngredientAmount5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateCocktailFragment_TextInput_IngredientAmount5"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_Ingredient5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateRecipeFragment_TextView_Ingredient5"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_IngredientAmount6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateCocktailFragment_TextInput_IngredientAmount6"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_Ingredient6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateRecipeFragment_TextView_Ingredient6"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_IngredientAmount7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateCocktailFragment_TextInput_IngredientAmount7"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_Ingredient7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateRecipeFragment_TextView_Ingredient7"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_IngredientAmount8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateCocktailFragment_TextInput_IngredientAmount8"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_Ingredient8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateRecipeFragment_TextView_Ingredient8"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_IngredientAmount9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateCocktailFragment_TextInput_IngredientAmount9"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_Ingredient9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateRecipeFragment_TextView_Ingredient9"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_IngredientAmount10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateCocktailFragment_TextInput_IngredientAmount10"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_Ingredient10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateRecipeFragment_TextView_Ingredient10"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_IngredientAmount11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateCocktailFragment_TextInput_IngredientAmount11"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_Ingredient11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateRecipeFragment_TextView_Ingredient11"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_IngredientAmount12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateCocktailFragment_TextInput_IngredientAmount12"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_Ingredient12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateRecipeFragment_TextView_Ingredient12"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_IngredientAmount13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateCocktailFragment_TextInput_IngredientAmount13"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_Ingredient13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateRecipeFragment_TextView_Ingredient13"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_IngredientAmount14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateCocktailFragment_TextInput_IngredientAmount14"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_Ingredient14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateRecipeFragment_TextView_Ingredient14"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_IngredientAmount15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateCocktailFragment_TextInput_IngredientAmount15"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_Ingredient15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateRecipeFragment_TextView_Ingredient15"
                    android:theme="@style/CreateCocktail_TextInput_Constraints"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/CreateCocktailFragment_Button_AddIngredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:theme="@style/Project_Button_BlackText"
                    android:text="@string/CreateCocktailFragment_Button_AddIngredient" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_CocktailInstructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="start"
                    android:hint="Werkwijze"
                    android:inputType="textMultiLine"
                    android:minHeight="150dp"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black" />

                <Spinner
                    android:id="@+id/CreateCocktailFragment_Spinner_CocktailCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:entries="@array/soortenArray"
                    />

                <Button
                    android:id="@+id/CreateCocktailFragment_Button_AddCocktail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/CreateCocktailFragment_Button_AddCocktail"
                    android:theme="@style/Project_Button_BlackText"
                    />

            </LinearLayout>
        </ScrollView>

    </FrameLayout>
</layout>
